<resources>
    <string name="app_name">Inventory</string>

    <string name="bullet">•</string>
    <string name="sale">Sale</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_phone">Supplier Phone No.</string>
    <string name="availability">Availability</string>
    <string name="image_description">Book Image</string>

    <string name="hint_name">Book Name</string>
    <string name="hint_author">Author Name</string>
    <string name="hint_supplier">Supplier Name</string>
    <string name="hint_supplier_phone">Enter Supplier Phone No.</string>
    <string name="hint_availability">No. of Copies Available</string>

    <string name="editor_activity_title_new_book">New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_failed">Insert book failed</string>
    <string name="editor_insert_book_successful">Insert book successful</string>
    <string name="editor_delete_book_successful">Book deleted successfully</string>
    <string name="editor_delete_book_failed">Delete book failed</string>
    <string name="all_delete_successful">All books are deleted successfully</string>
    <string name="unsaved_changes_dialog_msg">Discard changes?</string>
    <string name="delete_dialog_msg">Sure you want to delete the entry?</string>

    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>


</resources>
