<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="4dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/add_book_icon4" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Harry Potter and the Prisoner of Azkaban" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                tools:text="JK Rowling" />

            <TextView
                android:id="@+id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/bullet"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/availability_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                tools:text="100" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/sale" />

</LinearLayout>